<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="16dp"
    tools:context=".RecipeDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/recipe_details_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_category"
                android:paddingBottom="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@android:color/holo_green_light"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="14dp">

                <ImageView
                    android:id="@+id/recipe_details_image"
                    android:layout_width="393dp"
                    android:layout_height="262dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/details_activity_image_description"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:src="@drawable/dish_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/recipe_details_created_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/created_by"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/recipe_details_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.708"
                    app:layout_constraintStart_toEndOf="@+id/recipe_details_created_by" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_details_ttc"
                android:text="@string/time_to_completion"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/needed_equipment"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_details_equipment"
                android:text="@string/equipment_placeholder"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/needed_ingredients"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_details_ingredients"
                android:text="@string/ingredient_placeholder"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_details_steps"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>