<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:TagsEditText="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateRecipeActivity">

    <ImageView
        android:id="@+id/create_recipe_image"
        android:layout_width="393dp"
        android:layout_height="262dp"
        android:src="@drawable/dish_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        android:contentDescription="@string/image_of_recipe"/>

    <ImageView
        android:id="@+id/create_recipe_post_button"
        android:layout_width="116dp"
        android:layout_height="103dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/create_recipe_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/create_recipe_image"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/string_image_for_posting_recipe_image"/>

    <EditText
        android:id="@+id/create_recipe_name"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/name_of_recipe"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_image" />

    <AutoCompleteTextView
        android:id="@+id/create_recipe_category"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:completionThreshold="1"
        android:dropDownAnchor="@id/create_recipe_category"
        android:ems="10"
        android:hint="@string/type_of_recipe"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_name" />

    <mabbas007.tagsedittext.TagsEditText
        android:id="@+id/create_recipe_equipment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/add_equipment"
        android:lines="4"
        android:minLines="3"
        android:scrollbars="vertical"
        TagsEditText:allowSpaceInTag="true"
        TagsEditText:tagsBackground="@drawable/square"
        TagsEditText:tagsCloseImageLeft="@drawable/dot"
        TagsEditText:tagsCloseImagePadding="@dimen/defaultTagsCloseImagePadding"
        TagsEditText:tagsCloseImageRight="@drawable/tag_close"
        TagsEditText:tagsTextColor="@color/tag_blue"
        TagsEditText:tagsTextSize="@dimen/defaultTagsTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_category" />

    <Button
        android:id="@+id/create_recipe_add_steps"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_steps"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_ttc" />

    <Button
        android:id="@+id/create_recipe_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_ingredients"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toEndOf="@+id/create_recipe_add_steps"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_ttc" />

    <ProgressBar
        android:id="@+id/create_recipe_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_add_steps" />

    <Button
        android:id="@+id/create_recipe_add_button"
        android:layout_width="380dp"
        android:layout_height="63dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save_recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/create_recipe_ttc"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/time_to_completion"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_equipment" />
</androidx.constraintlayout.widget.ConstraintLayout>