<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/steps_popup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:text="@string/step_title"/>

            <EditText
                android:id="@+id/steps_popup_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                android:layout_below="@+id/steps_popup_title"
                android:hint="@string/step_description_hint" />

            <Button
                android:id="@+id/steps_popup_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/steps_popup_description"
                android:layout_marginEnd="5dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/add"
                android:textSize="14sp"
                app:backgroundTint="#F34C4C"
                android:textStyle="bold"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>